--- a/views/ask-form.ejs
+++ b/views/ask-form.ejs
@@ -7,12 +7,12 @@
             <h3>Do your ask</h3>
         </div>
         <div class="card-body">
-            <form>
+            <form method="POST" action="/ask">
                 <label>Title</label>
-                <input type="text" name="Title" class="form-control">
+                <input type="text" name="title" class="form-control">
                 <br>
                 <label>Description</label>
-                <textarea name="Description" class="form-control"></textarea>
+                <textarea name="description" class="form-control"></textarea>
                 <br>
                 <button class="btn btn-success">Ask</button>
             </form>
