--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,22 @@
 <%- include ('partials/header.ejs')%>
 <%- include ('partials/navbar.ejs')%>
 <body>
-    <h1>Ask a Question</h1>
+    <% for (const question of questions) { %>
+        <div class="card">
+            <div class="card-title">
+                <h3><%= question.title %></h3>
+            </div>
+
+            <div class="card-body">
+                <p><%= question.description %></p>
+            </div>
+
+            <div class="card-footer">
+                <button class="btn btn-success">
+                    Answer
+                </button>
+            </div>
+        </div>
+    <% } %>
 </body>
 <%- include ('partials/footer.ejs')%>
